RESOLVED FIXED264622
[UnifiedPDF] PDFs in <embed> and <object> do not clip
https://bugs.webkit.org/show_bug.cgi?id=264622
Summary [UnifiedPDF] PDFs in <embed> and <object> do not clip
Tim Horton
Reported 2023-11-10 13:58:13 PST
[UnifiedPDF] PDFs in <embed> and <object> do not clip
Attachments
Tim Horton
Comment 1 2023-11-10 14:00:35 PST
EWS
Comment 2 2023-11-10 15:56:35 PST
Committed 270573@main (bd2dbdec504a): <https://commits.webkit.org/270573@main> Reviewed commits have been landed. Closing PR #20334 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-11-10 15:57:27 PST
Note You need to log in before you can comment on or make changes to this bug.