[UnifiedPDF] PDFs in <embed> and <object> do not clip https://bugs.webkit.org/show_bug.cgi?id=264622 <rdar://problem/118155018>

Reviewed by Simon Fraser.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::updateLayerHierarchy):
Add explicit clipping and scrolling layers.

(WebKit::UnifiedPDFPlugin::didChangeSettings):
Propagate layer border and repaint counter settings when changed.

(WebKit::UnifiedPDFPlugin::didChangeScrollOffset):
Scroll the scrolling layer.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
(WebKit::PDFPluginBase::didChangeSettings):
* Source/WebKit/WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::didChangeSettings):
* Source/WebKit/WebProcess/Plugins/PluginView.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):
Propagate preference changes to PDFPlugin.

Canonical link: https://commits.webkit.org/270573@main