Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm
@@ -116,22 +116,55 @@ void UnifiedPDFPlugin::scheduleRenderingUpdate()
 void UnifiedPDFPlugin::updateLayerHierarchy()
 {
     if (!m_rootLayer) {
-        auto rootLayer = createGraphicsLayer("UnifiedPDFPlugin root"_s, GraphicsLayer::Type::Normal);
-        m_rootLayer = rootLayer.copyRef();
-        rootLayer->setAnchorPoint({ });
+        m_rootLayer = createGraphicsLayer("UnifiedPDFPlugin root"_s, GraphicsLayer::Type::Normal);
+        m_rootLayer->setAnchorPoint({ });
+    }
+
+    if (!m_clippingLayer) {
+        m_clippingLayer = createGraphicsLayer("UnifiedPDFPlugin clipping"_s, GraphicsLayer::Type::Normal);
+        m_clippingLayer->setAnchorPoint({ });
+        m_clippingLayer->setMasksToBounds(true);
+        m_rootLayer->addChild(*m_clippingLayer);
+    }
+
+    if (!m_scrollingLayer) {
+        m_scrollingLayer = createGraphicsLayer("UnifiedPDFPlugin scrolling"_s, GraphicsLayer::Type::Normal);
+        m_scrollingLayer->setAnchorPoint({ });
+        m_clippingLayer->addChild(*m_scrollingLayer);
     }
 
     if (!m_contentsLayer) {
-        auto contentsLayer = createGraphicsLayer("UnifiedPDFPlugin contents"_s, GraphicsLayer::Type::TiledBacking);
-        m_contentsLayer = contentsLayer.copyRef();
-        contentsLayer->setAnchorPoint({ });
-        contentsLayer->setDrawsContent(true);
-        didChangeIsInWindow();
-        m_rootLayer->addChild(*contentsLayer);
+        m_contentsLayer = createGraphicsLayer("UnifiedPDFPlugin contents"_s, GraphicsLayer::Type::TiledBacking);
+        m_contentsLayer->setAnchorPoint({ });
+        m_contentsLayer->setDrawsContent(true);
+        m_scrollingLayer->addChild(*m_contentsLayer);
     }
+
+    m_clippingLayer->setSize(size());
 
     m_contentsLayer->setSize(contentsSize());
     m_contentsLayer->setNeedsDisplay();
+
+    didChangeSettings();
+    didChangeIsInWindow();
+}
+
+void UnifiedPDFPlugin::didChangeSettings()
+{
+    CheckedPtr page = this->page();
+    if (!page)
+        return;
+    Settings& settings = page->settings();
+    bool showDebugBorders = settings.showDebugBorders();
+    bool showRepaintCounter = settings.showRepaintCounter();
+    auto propagateSettingsToLayer = [&] (GraphicsLayer& layer) {
+        layer.setShowDebugBorder(showDebugBorders);
+        layer.setShowRepaintCounter(showRepaintCounter);
+    };
+    propagateSettingsToLayer(*m_rootLayer);
+    propagateSettingsToLayer(*m_clippingLayer);
+    propagateSettingsToLayer(*m_scrollingLayer);
+    propagateSettingsToLayer(*m_contentsLayer);
 }
 
 void UnifiedPDFPlugin::notifyFlushRequired(const GraphicsLayer*)
@@ -262,9 +295,7 @@ RefPtr<FragmentedSharedBuffer> UnifiedPDFPlugin::liveResourceData() const
 
 void UnifiedPDFPlugin::didChangeScrollOffset()
 {
-    // FIXME: Build up a layer hierarchy more like that of the root of web content
-    // instead of randomly moving the contents layer around.
-    m_contentsLayer->setPosition({ -static_cast<float>(m_scrollOffset.width()), -static_cast<float>(m_scrollOffset.height()) });
+    m_scrollingLayer->setPosition({ -static_cast<float>(m_scrollOffset.width()), -static_cast<float>(m_scrollOffset.height()) });
     scheduleRenderingUpdate();
 }
 
